# sppi

./: README.md  app.py  pyproject.toml
pages/: 1_Program_Overview.py  2_Nutrition_Data.py  3_Placement_Opportunities.py  4_Private_Sector_Collaboration.py  5_Eligibility_Resources.py  6_Prediksi_Kebutuhan_Formasi.py  7_Model_Prediksi_dan_Algoritma.py  8_Dashboard_Kolaborasi_Swasta.py
utils/: data_utils.py  map_utils.py  visualization_utils.py
